--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,7 @@ body {
 
   font-family: "Noto Sans TC", sans-serif;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
